--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 # Voir : https://create-react-app.dev/docs/proxying-api-requests-in-development
-PORT=3013
+PORT=3043
 
 # Activer options pour https local avec IPv6
 HOST=::
@@ -10,8 +10,8 @@ MG_REDIS_HOST=localhost
 DANGEROUSLY_DISABLE_HOST_CHECK=true
 
 MG_MQ_CAFILE=/var/opt/millegrilles/configuration/pki.millegrille.cert
-MG_MQ_CERTFILE=/var/opt/millegrilles/secrets/pki.coupdoeil.cert
-MG_MQ_KEYFILE=/var/opt/millegrilles/secrets/pki.coupdoeil.cle
+MG_MQ_CERTFILE=/var/opt/millegrilles/secrets/pki.documents_web.cert
+MG_MQ_KEYFILE=/var/opt/millegrilles/secrets/pki.documents_web.cle
 MQ_HOST=localhost
 MG_REDIS_HOST=localhost
 MG_MQ_REDIS_PASSWD=/var/opt/millegrilles/secrets/passwd.redis.txt
