--- a/client/package.json
+++ b/client/package.json
@@ -1,9 +1,9 @@
 {
   "name": "millegrilles.documents.client",
-  "version": "2023.6.0",
+  "version": "2023.9.0",
   "private": true,
   "dependencies": {
-    "@dugrema/millegrilles.reactjs": "github:dugrema/millegrilles.reactjs#2023.6",
+    "@dugrema/millegrilles.reactjs": "github:dugrema/millegrilles.reactjs#2023.9",
     "buffer": "^6.0.3",
     "comlink": "^4.4.1",
     "crypto-browserify": "^3.12.0",
@@ -23,7 +23,7 @@
     "stream-browserify": "^3.0.0"
   },
   "peerDependencies": {
-    "@dugrema/millegrilles.utiljs": "github:dugrema/millegrilles.utiljs#2023.6",
+    "@dugrema/millegrilles.utiljs": "github:dugrema/millegrilles.utiljs#2023.9",
     "@reduxjs/toolkit": "^1.8",
     "bootstrap": "^5.1",
     "idb": "^7",
@@ -31,7 +31,7 @@
     "socket.io-client": "^4"
   },
   "scripts": {
-    "start": "react-app-rewired start",
+    "start": "export FAST_REFRESH=false && react-app-rewired start",
     "build": "BABEL_ENV=production react-app-rewired build",
     "eject": "react-scripts eject"
   },
@@ -50,6 +50,6 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://localhost:3043",
+  "proxy": "https://localhost:4043",
   "homepage": "/documents"
 }
